# caspi-hebrew-asr

./: .gitignore  .gitmodules  README.md  caspi-coreml-hex-integration.md  fluidaudio-caspi-1.7b.patch  hex-caspi-integration.patch  install-hex.sh
conversion/: README.md  convert-qwen3-asr.py  convert_decoder_fused.py  convert_stateful_decoder.py  extract_embeddings.py  individual_components.py  pyproject.toml  quantize_model.py
hex-patches/: QwenClient.swift  QwenModel.swift
